--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="burger">
                 <span></span>
             </div>
-            <ul class="nav" id="nav">
+            <ul class="nav">
                 <li class="nav_home drop">
                     <a href="#">Home</a>
                     <ul class="home_menu">
@@ -50,14 +50,14 @@
                     </ul>
                 </li>
                 <li class="nav_servises drop">
-                    <a href="#">Servises</a>
-                    <ul class="servises_menu">
-                        <li>
+                    <a class="hover" href="#">Servises</a>
+                    <ul class="nav_servises_menu">
+                        <li id="hover">
                             <a href="#">Graphic</a>
                             <ul></ul>
                         </li>
                         <li class="drop">
-                            <a href="#">Desigh</a>
+                            <a class="hover" href="#">Desigh</a>
                             <ul>
                                 <li>
                                     <a href="#">Industrial Design</a>
