--- a/index.html
+++ b/index.html
@@ -9,91 +9,93 @@
     <meta name="address" content="Earth">
     <meta name="robots" content="none">
     <meta property="og:description" content="Тестовое задание: Меню">
+    <meta property="og:image" content="img/p.jpg">
+    <link rel="shortcut icon " href="img/p.jpg " type="image/jpg ">
     <title>Меню</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet " href="css/style.css ">
 
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="burger">
+            <div class="burger ">
                 <span></span>
             </div>
-            <ul class="nav">
-                <li class="nav_home drop">
-                    <a href="#">Home</a>
-                    <ul class="home_menu">
+            <ul class="nav ">
+                <li class="nav_home drop ">
+                    <a href="# ">Home</a>
+                    <ul class="home_menu ">
                         <li>
-                            <a href="#">Hall</a>
+                            <a href="# ">Hall</a>
                         </li>
                         <li>
-                            <a href="#">Kitchen</a>
+                            <a href="# ">Kitchen</a>
                         </li>
                         <li>
-                            <a href="#">Bedroom</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav_contact drop">
-                    <a href="#">Contact</a>
-                    <ul class="Contact_menu drop">
-                        <li>
-                            <a href="#">Phone</a>
-                        </li>
-                        <li>
-                            <a href="#">Mail</a>
-                        </li>
-                        <li>
-                            <a href="#">Address</a>
+                            <a href="# ">Bedroom</a>
                         </li>
                     </ul>
                 </li>
-                <li class="nav_servises drop">
-                    <a class="hover" href="#">Servises</a>
-                    <ul class="nav_servises_menu">
-                        <li id="hover">
-                            <a href="#">Graphic</a>
+                <li class="nav_contact drop ">
+                    <a href="# ">Contact</a>
+                    <ul class="Contact_menu drop ">
+                        <li>
+                            <a href="# ">Phone</a>
+                        </li>
+                        <li>
+                            <a href="# ">Mail</a>
+                        </li>
+                        <li>
+                            <a href="# ">Address</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav_servises drop ">
+                    <a class="hover " href="# ">Servises</a>
+                    <ul class="nav_servises_menu ">
+                        <li id="hover ">
+                            <a href="# ">Graphic</a>
                             <ul></ul>
                         </li>
-                        <li class="drop">
-                            <a class="hover" href="#">Desigh</a>
+                        <li class="drop ">
+                            <a class="hover " href="# ">Desigh</a>
                             <ul>
                                 <li>
-                                    <a href="#">Industrial Design</a>
+                                    <a href="# ">Industrial Design</a>
                                 </li>
                                 <li>
-                                    <a href="#">Web Design</a>
+                                    <a href="# ">Web Design</a>
                                 </li>
                                 <li>
-                                    <a href="#">Graphic design</a>
+                                    <a href="# ">Graphic design</a>
                                 </li>
                                 <li>
-                                    <a href="#">Design image</a>
+                                    <a href="# ">Design image</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">Hosting</a>
+                            <a href="# ">Hosting</a>
                         </li>
                         <li>
-                            <a href="#">Cats</a>
+                            <a href="# ">Cats</a>
                         </li>
                     </ul>
                 </li>
-                <li class="About">
-                    <a href="#">About</a>
+                <li class="About ">
+                    <a href="# ">About</a>
                 </li>
                 <li>
-                    <a href="#">Cats</a>
+                    <a href="# ">Cats</a>
                 </li>
             </ul>
 
 
         </nav>
     </header>
-    <section class="content">
-        <div class="content_box">
+    <section class="content ">
+        <div class="content_box ">
             <h1>Content</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas officia saepe fugit tempora eaque ea dolorem accusamus ipsam aperiam numquam corporis similique provident illo voluptates, ad eos aliquam recusandae mollitia.</p>
 
@@ -107,10 +109,10 @@
         </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
-    <script src="js/burger.js"></script>
+    <script src="js/burger.js "></script>
 
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/hammerjs/2.0.8/hammer.min.js"></script> -->
-    <!-- <script src="js/swipe.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/hammerjs/2.0.8/hammer.min.js "></script> -->
+    <!-- <script src="js/swipe.js "></script> -->
 </body>
 
 </html>
